--- a/src/index.css
+++ b/src/index.css
@@ -217,12 +217,13 @@ img {
   display: flex;
   justify-content: center;
   background-image: url("images/imgb.png");
-  background-size: 100% 100%;
+  background-size: cover;
+  /* object-fit: cover; */
   /* background-image: url('https://images.pexels.com/photos/167491/pexels-photo-167491.jpeg?auto=compress&cs=tinysrgb&h=650&w=940') no-repeat center center fixed;  */
-  background-size: 100% 100%;
+  /* background-size: 100% 100%; */
   overflow-x: hidden;
-  object-fit: contain;
-  background-repeat: no-repeat;
+  /* object-fit: contain; */
+  /* background-repeat: no-repeat; */
   background-color: rgba(0, 0, 0, 0.7);
   background-blend-mode: difference;
 }
