--- a/src/index.css
+++ b/src/index.css
@@ -203,6 +203,12 @@ body {
   flex-direction: row;
   justify-content: flex-start;
 }
+#peacock_1 {
+  width:270px
+}
+#peacock {
+  width:270px
+}
 #logo {
   width: 80px;
   height: 60px;
@@ -300,11 +306,11 @@ img {
   border: 2px solid whitesmoke;
   border-radius: 7px;
 }
-.img_1:hover {
+/* .img_1:hover {
   box-shadow: 10px 30px 28px -18px rgba(0, 0, 0, 0.6);
   transform: scale(1.05, 1.05);
   border-radius: 20px;
-}
+} */
 
 #para {
   width: 250px;
@@ -399,11 +405,11 @@ img {
   border: 2px solid whitesmoke;
   border-radius: 7px;
 }
-.img_2:hover {
+/* .img_2:hover {
   box-shadow: 10px 30px 28px -18px rgba(0, 0, 0, 0.6);
   transform: scale(1.05, 1.05);
   border-radius: 20px;
-}
+} */
 #para1 {
   width: 280px;
   /* height: 350px; */
@@ -841,6 +847,7 @@ img {
     color: #fff;
     margin: 5px;
   }
+  
   .flash_1 {
     display: inline-block;
     /* padding-left: 120px; */
@@ -1326,6 +1333,16 @@ img {
   }
 }
 @media (min-width: 1048px) {
+  .img_1:hover {
+    box-shadow: 10px 30px 28px -18px rgba(0, 0, 0, 0.6);
+    transform: scale(1.05, 1.05);
+    border-radius: 20px;
+  }
+  .img_2:hover {
+    box-shadow: 10px 30px 28px -18px rgba(0, 0, 0, 0.6);
+    transform: scale(1.05, 1.05);
+    border-radius: 20px;
+  }
   #paragraphmemo {
     font-size: 22px;
     height: 250px;
