--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,7 @@
   padding: 0;
   box-sizing: border-box;
 }
-body {
-  /* overflow-x: hidden; */
-  /* overflow-y: hidden; */
-}
+
 :root {
   --color-primary: #0073ff;
   --color-white: #e9e9e9;
@@ -330,10 +327,14 @@ img {
 } */
 .gallery_div {
   width: 100%;
-  height: 500px;
+  height: 550px;
   justify-content: center;
-  background-image: url("images/ICS.jpeg");
+  background-image: url("images/imgb2.jpg");
   background-size:cover ;
+  overflow-x: hidden;
+  background-repeat: no-repeat;
+  background-color: rgba(0, 0, 0, 0.7);
+  background-blend-mode: difference;
 }
 .gallery_div_placement {
   width: 100%;
