--- a/src/index.css
+++ b/src/index.css
@@ -324,7 +324,6 @@ img {
 .gallery_div {
   width: 100%;
   height: 550px;
- 
   background-image: url("images/imgb2.jpg");
   background-size:  cover;
   
@@ -935,7 +934,7 @@ img {
   }
   .gallery_div,.gallery_div_placement {
     width: 100%;
-    height: 300px;
+    height: 250px;
     /* display:flex; */
     /* flex-direction: column; */
     /* justify-content: center; */
@@ -1791,6 +1790,13 @@ header.masthead .overlay{position:absolute;background-color:#212529;height:100%;
   }
   header.masthead h3 {
       font-size: 4rem;
+  }
+}
+@media (max-width:768px) {
+  header.masthead {
+      padding-top: 12rem;
+      padding-bottom: 12rem;
+      height:400px
   }
 }
 header.masthead1 {
